--- a/Kaiserreich Korean Translation/localisation/KR_Bulgaria_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bulgaria_l_english.yml
@@ -855,37 +855,37 @@ BUL_a_stronger_and_loyal_bulgaria:0 "더 강하고 충직한 불가리아"
 BUL_a_stronger_and_loyal_bulgaria_desc:0 "We have finally managed to consolidate power under the Tsar. His rule, alongside the military's, is absolute. The Bulgarian people do not question the new political realities and are willing to live under our regime. Long live the Tsar!"
 
 BUL_the_rule_of_the_syndicalists:0 "생디칼리스트의 규칙"
-BUL_the_rule_of_the_syndicalists_desc:0 "In the midst of the chaos, the Narrow Socialists have managed to take power in Bulgaria. While not as popular as the Anarchist Federation, the syndicalists have managed to effectively consolidate their power... for now. The question remains, however: can the state be effectively restructured in order to support this new system?"
+BUL_the_rule_of_the_syndicalists_desc:0 "혼란의 가운데, 좁은 사회주의자들은 불가리아에서 권력을 잡을 수 있었습니다. 아나키스트 연맹만큼 대중적이지는 않지만, 생디칼리스트는 사실상 그들의 힘을 효과적으로 통합할 수 있었습니다. 그러나 여전히 문제는 남아 있습니다 :이 새로운 시스템을 지원하기 위해 국가를 효과적으로 재구성 할 수 있을까요?"
 BUL_restructuring_the_state:0 "국가 구조 조정"
-BUL_restructuring_the_state_desc:0 "Measures must be taken in order to restructure the very core of the state and the minds of the people to accept and conform to syndicalism. We can no longer allow reactionary ideals to thrive within Bulgaria and consume our way of life."
+BUL_restructuring_the_state_desc:0 "생디칼리즘을 수용하고 따르기 위해 국가의 핵심과 국민의 마음을 재정비하기 위한 조치를 취해야 합니다. 우리는 불가리아 내에서 더 이상 반동적인 이상이 번성하고 우리의 삶의 방식을 소비하도록 허용할 수 없습니다."
 BUL_empower_the_free_trade_unions:0 "자유 무역 조합 권한 부여"
-BUL_empower_the_free_trade_unions_desc:0 "A key tenet of syndicalism is union control over the state. By empowering the Free Trade Unions, one of the biggest and oldest unions in Bulgaria, we can begin the gradual transition to union control over the state."
+BUL_empower_the_free_trade_unions_desc:0 "생디칼리즘의 핵심 원칙은 국가에 대한 노조의 통제입니다. 불가리아에서 가장 크고 오래된 노조 중 하나인 자유 무역 조합에 권한을 부여함으로써 우리는 점차 국가 통제로의 전환을 시작할 수 있습니다."
 BUL_international_alliances:0 "국제 연합"
-BUL_international_alliances_desc:0 "It is important that we broaden our horizons with regards to seeking new alliances. As it stands, we are fairly isolated and surrounded on all sides by reacionaries. By finding ourselves an ally to aid us in our time of need, we can ensure the survival of both the Bulgarian state and the revolution."
+BUL_international_alliances_desc:0 "새로운 동맹을 모색하는 것에 관한 우리의 시야를 넓히는 것은 중요합니다. 현재 상태로는, 우리는 반동분자들에 의해 모든 면에서 고립되어 있고 포위되어 있습니다. 우리가 필요로 하는 시기에 우리를 도울 수 있는 협력자를 찾음으로써 불가리아 국가들과 혁명의 생존을 보장할 수 있습니다."
 BUL_approach_the_french:0 "프랑스에게 접근"
-BUL_approach_the_french_desc:0 "There is no better ally than that of the Commune of France, who are the home of the syndicalist revolution. By joining forces with the French and declaring our support for the Third Internationale, we can ensure that we have allies to back us up."
-BUL_ally_with_the_soviets:0 "소련과의 동맹"
-BUL_ally_with_the_soviets_desc:0 "Both Bulgaria and the Soviet Union have histories rooted in similar traditions. One would only need to take a look at our shared origins to realise that Bulgaria and the Soviet Union are natural allies. In addition, the Soviets themselves are much closer to us geographically, meaning that they're in a position to intervene in our favour if the need arises."
+BUL_approach_the_french_desc:0 "생디칼리스트 혁명의 본거지인 프랑스 코뮌보다 더 나은 동맹국은 없습니다. 프랑스와 힘을 합치고 제 3 세계에 대한 지지를 선언함으로써, 우리는 우리를 지지할 동맹국들이 있음을 확신할 수 있습니다."
+BUL_ally_with_the_soviets:0 "소비에트와의 동맹"
+BUL_ally_with_the_soviets_desc:0 "불가리아와 소비에트는 비슷한 전통에 뿌리를 둔 역사를 가지고 있습니다. 불가리아와 소비에트가 자연스러운 동맹국이라는 것을 깨닫기 위해서는 우리의 공통된 기원을 들여다보기만 하면 될 것입니다. 게다가, 소비에트는 지리적으로 우리와 훨씬 더 가깝고, 이것은 그들이 필요할 때 우리의 이익에 개입할 수 있는 위치에 있다는 것을 의미합니다."
 BUL_consolidating_our_power:0 "우리의 권력 통합"
-BUL_consolidating_our_power_desc:0 "The only way that we can fully ensure that Bulgaria will remain a syndicalist nation for the years to come is to swiftly, yet effectively, consolidate our power and oust any reactionaries who would seek to destabilise the current regime."
+BUL_consolidating_our_power_desc:0 "불가리아가 앞으로 몇 년 동안 생디칼리스트 국가로 남아있을 것을 완벽하게 보장할 수 있는 유일한 방법은 우리의 권력을 빠르고 효과적으로 강화하고 현 정권을 불안정하게 만들려는 반동분자들을 쫓아내는 것입니다."
 BUL_industrialisation_programmes:0 "산업화 프로그램"
-BUL_industrialisation_programmes_desc:0 "For far too long Bulgaria has remained an agrarian nation, stagnating in terms of economic affairs when compared to other nations. We must begin to undertake industrialisation programmes so as to turn our economy into a more industrial one."
+BUL_industrialisation_programmes_desc:0 "불가리아는 너무 오랫동안 다른나라들에 비해 경제 문제 측면에서 침체된 채 농경 국가로 남아 있었습니다. 우리는 경제를 보다 산업적으로 바꾸기 위해 산업화 프로그램을 착수해야 합니다."
 BUL_communal_farming:0 "공동체 농업"
-BUL_communal_farming_desc:0 "Allowing the state to own farms and farmers to collectively run farms is the key to achieving an efficient agricultural output. The peasants and small farmers must be empowered rather than the capitalist agribusinessmen."
+BUL_communal_farming_desc:0 "국가가 농장을 소유하도록 허용하는 것은 효율적인 농업 생산량을 달성하기 위한 열쇠입니다. 농민과 소농들은 자본주의 농업인보다 권한을 부여받아야 합니다."
 BUL_removing_vestiges_of_monarchism:0 "제국주의 흔적 제거"
-BUL_removing_vestiges_of_monarchism_desc:0 "One of the most important societal shifts that we must begin to foster is the removal of all monarchism or any monarchist tendencies within Bulgaria. No kings or royal families shall be allowed to oppress the people any longer!"
+BUL_removing_vestiges_of_monarchism_desc:0 "우리가 육성해야 할 가장 중요한 사회적 변화 중 하나는 불가리아 내에서 모든 군주주의와 군주주의자들을 제거하는 것입니다. 더 이상 어떤 왕이나 왕족도 사람들을 억압하는 것을 허락하지 않을 것입니다!"
 BUL_weaken_the_military:0 "약화된 군대"
-BUL_weaken_the_military_desc:0 "As it stands, the military is one of the most outspoken opponents of the new regime. We must take to reorganising the structure of the military and replacing reactionary officers with ones that will be loyal to our cause. This will not be without consequence, however."
+BUL_weaken_the_military_desc:0 "현 상태에서, 군대는 새로운 체제의 가장 솔직한 반대자 중 하나입니다. 우리는 군대의 구조를 재조직하고 반동적인 장교를 우리의 대의에 충성하는 자로 대체해야 합니다. 하지만 이것이 중요하지 않은 것은 아닙니다."
 BUL_fight_the_reactionaries:0 "반동분자들과의 싸움"
-BUL_fight_the_reactionaries_desc:0 "Remaining vigilant and fighting any reactionaries is something that must be done in order to secure our status as a syndicalist state and protect the people themselves. We cannot allow for enemies of the state to corrupt the people by preaching destructive and violent ideals."
+BUL_fight_the_reactionaries_desc:0 "남을 경계하고 반동분자와 싸우는 것은 생디칼리스트 국가로서의 지위를 확보하고 국민 자신을 보호하기 위해 해야만 하는 일입니다. 우리는 국가의 적들이 파괴적이고 폭력적인 이상을 설교함으로써 국민을 부패시키는 것을 허용할 수 없습니다."
 BUL_improve_living_standards:0 "생활 수준 향상"
-BUL_improve_living_standards_desc:0 "While industrialising the nation is all fair and good, we should also consider raising living standards for the people of Bulgaria. The development of an educated middle class is important in order to ensure that we have a flourishing populace that can help advance the state."
+BUL_improve_living_standards_desc:0 "국가가 산업화되면서 모든 것이 공정하고 좋으며, 우리는 또한 불가리아인들의 생활 수준 향상을 고려해야 합니다. 교육받은 중산층의 발전은 우리가 국가 발전을 도울 수 있는 번성하는 대중을 확보하는 데 중요합니다."
 BUL_a_fairer_electoral_system:0 "공정 선거 제도"
-BUL_a_fairer_electoral_system_desc:0 "While the Liberal Party had claimed to be in favour of representing the views of all Bulgarians, the policies enacted under their rule did not reflect such claims. Parties which had leaned left were oftentimes targeted by the government and hurt as a result of the Liberal policies. We must take to reversing that and allowing for the representation of the views of the Bulgarian people."
+BUL_a_fairer_electoral_system_desc:0 "자유당은 불가리아인들의 견해를 대변하는 것에 찬성한다고 주장했지만, 그들의 통치 하에 제정된 정책들은 그러한 주장을 반영하지 않았습니다. 좌파 성향이었던 정당들은 종종 정부의 표적이 되었고 자유주의 정책으로 인해 피해를 입었습니다. 우리는 그것을 뒤집어서 불가리아인들의 견해를 대변하는 것을 허용해야 합니다."
 BUL_represent_the_peasants:0 "농민 대표"
-BUL_represent_the_peasants_desc:0 "The peasantry are the ones who do the true work in Bulgaria; they are the ones who make our state what it truly is. We must ensure that they have a voice that is equal to that of every other citizen."
+BUL_represent_the_peasants_desc:0 "농민들은 불가리아에서 진정한 일을 하는 사람들입니다. 그들은 진정으로 우리 국가를 만드는 사람들입니다. 우리는 그들이 다른 모든 시민과 동등한 목소리를 낼 수 있도록 해야 합니다."
 BUL_bulgaria_under_syndicalism:0 "생디칼리즘 아래의 불가리아"
-BUL_bulgaria_under_syndicalism_desc:0 "Thankfully, it seems as though we have managed to consolidate power effectively and have instituted all of the policies we had sought to. We can safely say that Bulgaria is a syndicalist state, and can turn our gaze towards planning for a brighter, more optimistic future. Long live Bulgaria!"
+BUL_bulgaria_under_syndicalism_desc:0 "고맙게도, 우리는 권력을 효과적으로 통합할 수 있었고 우리가 추구했던 모든 정책을 시행한 것처럼 보입니다. 우리는 불가리아가 생디칼리스트 국가라고 안전하게 말할 수 있으며 보다 밝고 낙관적인 미래를 계획하는 쪽으로 시선을 돌릴 수 있습니다. 불가리아 만세!"
 
 BUL_the_broad_socialists:0 "넓은 사회주의자"
 BUL_the_broad_socialists_desc:0 "불가리아를 휩쓴 혼란 이후, 넓은 사회주의자는 불가리아의 새로운 지도자로서 재에서 가까스로 벗어났습니다. 부르주아 친화적 사회주의자들과 입헌군주자들로 구성된 넓은 사회주의자들은 불가리아 내에서 급격한 변화를 보고 싶어합니다."
