--- a/Kaiserreich Korean Translation/localisation/KR_Bulgaria_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bulgaria_l_english.yml
@@ -822,37 +822,37 @@ BUL_a_stable_and_united_bulgaria:0 "안정적이고 통합된 불가리아"
 BUL_a_stable_and_united_bulgaria_desc:0 "Thankfully, it seems as though most, if not all, of our reforms were met with great success and backing of the Bulgarian people. We can rest easy knowing that we have done our job properly, for the Bulgarian state is stable, its people unified, and, throughout it all, we have managed to preserve liberty and democracy within our great nation. Long live Bulgaria!"
 
 BUL_the_absolutists_have_seized_power:0 "절대론자들의 권력을 장악"
-BUL_the_absolutists_have_seized_power_desc:0 "When the dust had settled, the Absolutist faction had emerged as the victorious party and is now in charge of Bulgaria. Comrpised of hardline military officers, and lead by Ferdinand's son, Boris, the Aboslutists wish to bring power to where they feel it belongs: in the hands of the military and Tsar."
+BUL_the_absolutists_have_seized_power_desc:0 "사태가 진정되자 절대론자들은 승리한 당으로 떠오른 뒤 불가리아를 이끌고 있습니다. 강경파 군 장교들로 가득 차 있고 페르디난드의 아들인 보리스가 이끄는 절대론자들은 그들이 속한 곳, 즉 군대와 차르의 손에 권력을 가져오길 원합니다."
 BUL_empower_the_bulgarian_land_forces:0 "불가리아 육군 권한 부여"
-BUL_empower_the_bulgarian_land_forces_desc:0 "As stated earlier, it is of the utmost importance that the Bulgarian Land Forces be empowered for they are the reason that Bulgaria has managed to enjoy its dominance in the Balkans. In addition, however, it is crucial that we give the military leeway to do as it sees fit, so as to allow for a, hopefully, more powerful armed forces."
+BUL_empower_the_bulgarian_land_forces_desc:0 "앞서 언급했듯이 불가리아 육군은 불가리아가 발칸 반도에서 군림하는 것을 누리게 해준 이유이기 때문에 권한을 부여 받는 것이 가장 중요합니다. 그러나 더 나아가 강력한 군대를 허용하기 위해 적절한 조치를 취할 수 있는 기회를 주는 것이 중요합니다."
 BUL_loyal_officers_in_high_command:0 "사령부의 충성스러운 장교들"
-BUL_loyal_officers_in_high_command_desc:0 "We cannot allow those who oppose our platform to remain in the upper echelons of the military. Steps must be taken in order to replace officers in high command unwilling to aid or opposed to our cause. The military must be lead by men who possess nerves of steel, are loyal to the Tsar, and are ready to do whatever it takes to defend Bulgaria."
+BUL_loyal_officers_in_high_command_desc:0 "우리는 우리의 강령에 반대하는 사람들이 군대의 상층부에 남아 있도록 허용할 수 없습니다. 고위 사령관이 우리의 사기를 돕거나 반대하는 것을 꺼리는 대신에 임원을 교체하기 위한 조치를 취해야 합니다. 군대는 철의 정신을 가지고 있는 자가 이끌어야 하며, 차르에 충성하며 불가리아를 지키기 위해 필요한 모든 것을 할 준비가 되어 있어야 합니다."
 BUL_bolster_the_national_guards_unit:0 "국가 수비대 강화"
-BUL_bolster_the_national_guards_unit_desc:0 "Founded in 1879, the National Guards Unit is a successor to Prince Alexander I's Peronal Cavalry Convoy. By properly equipping them and ensuring that their arms and tactics are both up to date, we can ensure better protection for the Tsar."
+BUL_bolster_the_national_guards_unit_desc:0 "1879년에 설립된 국가 수비대는 알렉산더르 1세 경호 기병대의 후계입니다. 그들을 적절히 배치하고 그들의 무기와 전술이 모두 최신인지 확인함으로써, 우리는 차르에 대한 더 나은 보호를 보장할 수 있습니다."
 BUL_idealised_sovereign:0 "이상화된 주권"
-BUL_idealised_sovereign_desc:0 "It is crucial that we take steps to convince the people that the Tsar is the one, and true, unifier for the Bulgarian nation. We must go that extra length and ensure that the Tsar is idealised by his subjects."
+BUL_idealised_sovereign_desc:0 "우리는 국민들에게 차르가 불가리아를 위한 유일하고 진실된 통일체라는 것을 납득시키는 조치를 취하는 것이 중요합니다. 우리는 여분으로 차르가 그의 과목에 의해 이상화되어 있는지 확인해야 합니다."
 BUL_expand_the_tsars_powers:0 "차르 권한 강화"
-BUL_expand_the_tsars_powers_desc:0 "The Tsar must be given the right to do as he sees fit, when he sees fit. It is crucial that the Tsar be empowered and be allowed to take direct action in order for the safety of the Bulgarian nation and its people."
+BUL_expand_the_tsars_powers_desc:0 "차르는 그가 옳다고 생각하는 대로 할 권리가 있습니다. 불가리아와 불가리아인들의 안전을 위해 챠르가 권한을 부여받고 직접적인 조치를 취하는 것이 중요합니다."
 BUL_suppress_the_agrarians:0 "농업 억제"
-BUL_suppress_the_agrarians_desc:0 "The Bulgarian Agrarian National Union has been a thorn in our side for far too long. They have already hurt Bulgaria much by espousing the ideals of pan-Slavism and greater co-operation with our enemy, Serbia. We cannot allow such an organisation to remain unchecked, lest the Agrarians bring about anarchy within Bulgaria."
+BUL_suppress_the_agrarians_desc:0 "불가리아 농민 연합은 오랫동안 우리의 골칫거리였습니다. 그들은 이미 범-슬라브 주의의 이상과 우리의 적 세르비아와의 더 큰 협력을 지지함으로써 불가리아를 많이 다치게 했습니다. 우리는 농업인들이 불가리아 내에서 무정부 상태를 일으키도록 놔둘 수 없습니다."
 BUL_ban_political_parties:0 "정당 금지"
-BUL_ban_political_parties_desc:0 "We do not need political parties within Bulgaria. They only seek to further divide the people for their own petty agendas and do what they deem is best for themselves. What we truly need is a society with no political parties, in which the Tsar and the military will safeguard and represent the views Bulgarian people."
+BUL_ban_political_parties_desc:0 "우리는 불가리아 내에서 정당이 필요하지 않습니다. 그들은 자신의 사소한 의제를 위해 사람들을 더 분열시키고 그들이 생각하기에 그들 자신을 위해 최선이라고 생각하는 것을 하려고 할 뿐입니다. 우리가 진정으로 필요로 하는 것은 정당이 없는 사회이며, 차르와 군대는 불가리아인들을 보호하고 대표할 것입니다."
 BUL_tighten_electoral_laws:0 "선거법 강화"
-BUL_tighten_electoral_laws_desc:0 "As it stands, too many radical political parties are allowed to flourish in the National Assembly. We must put an end to that and tighten electoral laws. That way, we can combat both the radicals within our government and, subsequently, destroy radicalism within Bulgaria."
+BUL_tighten_electoral_laws_desc:0 "현재 상태로는, 국회에서 너무 많은 급진적인 정당들이 번성할 수 있습니다. 우리는 그것을 끝내고 선거법을 강화해야 합니다. 그렇게 함으로써, 우리는 정부 내의 급진주의자들과 싸우고, 그 후에 불가리아 내의 급진주의를 파괴할 수 있습니다."
 BUL_empower_the_council_of_ministers:0 "각료 회의 권한 부여"
-BUL_empower_the_council_of_ministers_desc:0 "We must begin to shift the balance of power in favour of the Council of Ministers, the executive branch, so that the Tsar may empower those directly around him. This way, we can ensure that loyal advisers and supporters are at the helm, rather than a disloyal parliament."
+BUL_empower_the_council_of_ministers_desc:0 "차르가 주변 사람들에게 직접 권한을 부여할 수 있도록 우리는 내각의 이사회를 지지하는 힘의 균형을 바꾸기 시작해야 합니다. 이렇게하면 충성스러운 조언자와 지지자가 불충한 의회가 아니라 지배자가 될 수 있습니다."
 BUL_protect_the_bulgarian_people:0 "불가리아인 보호"
-BUL_protect_the_bulgarian_people_desc:0 "We must be vigilant and protect the Bulgarian people from forces, both internal and external, which seek to harm them. It is of the utmost importance that we protect our citizens, for without them there is no Bulgarian state."
+BUL_protect_the_bulgarian_people_desc:0 "우리는 경계심을 갖고 불가리아인들을 국내외적으로 해치려는 세력으로부터 보호해야 합니다. 국민들을 보호하는 것이 가장 중요합니다. 국민없이는 불가리아도 없기 때문입니다."
 BUL_looking_outward:0 "외향적으로 바라보기"
-BUL_looking_outward_desc:0 "We must begin to broaden our horizons and branch out in terms of international relations. Only once we have obtained allies can we begin to properly assert ourselves on the world stage and integrate ourselves into the international community."
+BUL_looking_outward_desc:0 "우리는 우리의 시야를 넓히고 국제 관계의 관점에서 출발해야 합니다. 우리가 동맹국들을 확보한 후에야 우리는 세계 무대에서 우리 자신을 적절히 주장하기 시작할 수 있고 국제 사회에 우리 자신을 통합할 수 있습니다."
 BUL_reconciliation_with_germany:0 "독일과의 화해"
-BUL_reconciliation_with_germany_desc:0 "The Liberals and Malinov had very much soured Bulgarian and German relations due to their rampant Germanophobia. We must send a delegation to the German Empire in an attempt to reverse these diplomatic blunders. It will not be easy, however."
+BUL_reconciliation_with_germany_desc:0 "자유주의자들과 말리노프는 만연한 독일 혐오 때문에 불가리아와 독일간의 관계를 매우 많이 악화시켰습니다. 우리는 이러한 외교적 실수를 만회하기 위해 독일 제국에 대표단을 파견해야 합니다. 하지만 쉽지 않을 것입니다."
 BUL_bulgarian_german_economic_ties:0 "불가리아-독일 경제 관계"
-BUL_bulgarian_german_economic_ties_desc:0 "To our great relief, it seems as though the German Empire has taken kindly to our reconciliation efforts and is willing to rekindle the flames of comradery once more. In order to further deepen our ties, we must look towards the institution of a trade policy within our nations. This will also help us gain preferred access to German trade."
+BUL_bulgarian_german_economic_ties_desc:0 "우리로서는 다행스럽게도 독일 제국이 우리의 화해 노력에 친절히 응하고 다시 한 번 화해의 불꽃을 다시 한 번 불붙이려고 하는 것 같습니다. 우리의 관계를 더욱 깊게 하기 위해서, 우리는 우리나라 내의 무역 정책의 수립을 고려해야 합니다. 이것은 또한 우리가 독일 무역에 대한 우선 접근권을 얻는데 도움이 될 것입니다."
 BUL_german_military_mission:0 "독일 군사 고문단"
-BUL_german_military_mission_desc:0 "In order to strengthen our already strong army, it would be wise to turn to the Germans, yet again, and ask them to send a military mission. This way, we can better learn tactics that had developed following the Weltkrieg and continue the continual modernisation of our armed forces."
+BUL_german_military_mission_desc:0 "우리의 이미 강력한 군대를 강화하기 위해서, 다시 한번 독일인들에게 의지하고 그들에게 군사 고문단을 보내달라고 요청하는 것이 현명할 것입니다. 이런 식으로 우리는 세계대전에 이어 발전해 온 전술을 더 잘 배울 수 있고 우리 군대의 지속적인 현대화를 계속할 수 있습니다."
 BUL_a_stronger_and_loyal_bulgaria:0 "더 강하고 충직한 불가리아"
-BUL_a_stronger_and_loyal_bulgaria_desc:0 "We have finally managed to consolidate power under the Tsar. His rule, alongside the military's, is absolute. The Bulgarian people do not question the new political realities and are willing to live under our regime. Long live the Tsar!"
+BUL_a_stronger_and_loyal_bulgaria_desc:0 "우리는 마침내 차르의 통치 하에서 권력을 통합하는 데 성공했습니다. 군대와 함께 그의 통치는 절대적입니다. 불가리아인들은 새로운 정치 현실에 의문을 제기하지 않고 우리 정권 아래서 기꺼이 살 것입니다. 차르 만세!"
 
 BUL_the_rule_of_the_syndicalists:0 "생디칼리스트의 규칙"
 BUL_the_rule_of_the_syndicalists_desc:0 "혼란의 가운데, 좁은 사회주의자들은 불가리아에서 권력을 잡을 수 있었습니다. 아나키스트 연맹만큼 대중적이지는 않지만, 생디칼리스트는 사실상 그들의 힘을 효과적으로 통합할 수 있었습니다. 그러나 여전히 문제는 남아 있습니다 :이 새로운 시스템을 지원하기 위해 국가를 효과적으로 재구성 할 수 있을까요?"
