--- a/Kaiserreich Korean Translation/localisation/KR_Bulgaria_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bulgaria_l_english.yml
@@ -789,37 +789,37 @@ BUL_a_military_with_a_state:0 "국가와 함께하는 군대"
 BUL_a_military_with_a_state_desc:0 "We have done all that we can–improved the quality of our officers, invested in new types of equipment, expanded the manpower reserves, and spent our efforts on military research–in order to ensure that the supremacy of the Bulgarian Land Forces remains everlasting. Long live the military!"
 
 BUL_the_liberals_in_power:0 "자유의 힘"
-BUL_the_liberals_in_power_desc:0 "The Liberal Party, largely seen as the party of the status-quo by those further to the left of the political spectrum, has been in power for a long time with Aleksandar Malinov as the party leader. Currently, the platform supported by Liberals is one of increased representation for the people, through the National Assembly, and progressive reforms."
+BUL_the_liberals_in_power_desc:0 "정치권의 좌파에 의한 지위의 정당으로 널리 간주되고 있는 자유당은 알렉산다르 말리노프와 함께 오랜 기간 동안 당수로 집권해 왔습니다. 현재 자유당이 지지하는 정당은 국회를 통한 국민 대표와 진보적인 개혁의 증가 중 하나입니다."
 BUL_assert_the_power_of_the_tsar:0 "차르 힘 주장"
-BUL_assert_the_power_of_the_tsar_desc:0 "It is important that the power of the Tsar is stressed and his authority not undermined for he acts as the unifier for the Bulgarian nation and the Bulgarian people."
+BUL_assert_the_power_of_the_tsar_desc:0 "차르의 힘이 불가리아와 불가리아인을 위한 통일체 역할을 하기 때문에 그의 권위가 약화되지 않는 것이 중요합니다."
 BUL_empowering_the_national_assembly:0 "국회 권한 강화"
-BUL_empowering_the_national_assembly_desc:0 "A key tenet of the Liberal Party is empowering the parliament, known as the National Assembly, so as to better represent the views of the Bulgarian people and ensure that democracy within Bulgaria is not compromised."
+BUL_empowering_the_national_assembly_desc:0 "자유당의 핵심 입장은 불가리아인의 의견을 더 잘 대변하고 불가리아의 민주주의가 훼손되지 않도록 하기 위해 국회의 권한을 강화하는 것입니다."
 BUL_keeping_radicalism_at_bay:0 "급진주의 유지"
-BUL_keeping_radicalism_at_bay_desc:0 "While it is important that we ensure that the views of the Bulgarian people are properly represented, it is also important to keep in mind that tough times call for tough measures. We must take action to combat the various parties which would seek to destabilise Bulgaria or espouse ideas that could potentially threaten the royal family."
+BUL_keeping_radicalism_at_bay_desc:0 "불가리아인들의 견해가 제대로 표현되어 있는지 확인하는 것이 중요하지만, 어려운 시기에는 어려운 조치가 필요하다는 것을 명심하는 것도 중요합니다. 불가리아를 불안정하게 하거나 왕족을 위협할 수 있는 생각을 지지할 다양한 정당들과 싸우기 위해 조치를 취해야 합니다."
 BUL_ensuring_political_stability:0 "정치적 안정 보장"
-BUL_ensuring_political_stability_desc:0 "It is of the utmost importance that we do not allow radicals and/or troublemakers from both within and without to cause trouble for Bulgaria. We cannot, and must not, allow the state to become destabilised, lest our enemies take advantage of us during our darkest hour."
+BUL_ensuring_political_stability_desc:0 "불가리아에게 문제를 일으키지 않고 내외의 과격파나 말썽꾼을 허용하지 않는 것이 가장 중요합니다. 우리는 우리의 적이 우리의 가장 어두운 시간 동안 우리를 이용하지 못하도록 해야하며, 국가가 불안정해지게 할 수 없고, 또 그렇게 해서는 안 됩니다."
 BUL_institution_of_progressive_reforms:0 "진보적 개혁 기관"
-BUL_institution_of_progressive_reforms_desc:0 "We must take to supporting the downtrodden and disenfranchised, granting them equal freedoms as their fellow citizens. In addition, we must take to protecting liberty and democracy within Bulgaria, which will allow for a thriving social atmosphere."
+BUL_institution_of_progressive_reforms_desc:0 "우리는 억압받고 박탈당한 이들을 지지하며, 그들에게 같은 자유를 주어야 합니다. 게다가, 우리는 불가리아 내에서의 자유와 민주주의를 수호해야 하며, 그것은 번영하는 사회적 분위기를 허락할 것입니다."
 BUL_full_abolition_of_press_censorship:0 "언론 검열의 전면적 폐지"
-BUL_full_abolition_of_press_censorship_desc:0 "While Malinov and the Liberals had partially abolished press censorship prior to the Weltkrieg, many of the restrictions placed upon the press continued to remain. It is time we allow for the press to properly thrive within Bulgaria; we cannot continue to restrict them forever. The people have the right to receive unadultered news."
+BUL_full_abolition_of_press_censorship_desc:0 "말리노프와 자유당은 세계대전 이전에 부분적으로 언론 검열 제도를 폐지했지만, 언론에 부과된 많은 규제들은 계속 남아있었습니다. 불가리아 내에서 언론이 제대로 성장할 수 있도록 해야 할 때입니다. 우리는 그들을 영원히 제한할 수 없습니다. 국민은 교양없는 소식을 받을 권리가 있습니다."
 BUL_political_meritocracy:0 "정치 실력주의"
-BUL_political_meritocracy_desc:0 "We must base our political system not off of personal motivations or nepotism, but off of meritocratic ideals. Every party, that is deemed fit, of course, shall be given equal opportunity in order to gain popularity within parliament and better represent its supporters. Democracy must be allowed to thrive within Bulgaria."
+BUL_political_meritocracy_desc:0 "우리는 개인적인 동기나 족벌주의에서가 아니라 능력주의적 이상으로부터 우리의 정치 체제를 세워야 합니다. 물론 적절하다고 여겨지는 모든 당은 국회 내에서 인기를 얻고 지지자들을 더 잘 대표하기 위해 동등한 기회를 주어야 합니다. 불가리아 내에서 민주주의가 번영하도록 허용되어야만 합니다."
 BUL_proportional_representation_in_the_national_assembly:0 "비례 대표"
-BUL_proportional_representation_in_the_national_assembly_desc:0 "By instituting a proportional voting system, we can ensure that elections are fairer and that candidates and parties receieve the proper amount of votes. We cannot allow the views of the Bulgarian people to go unnoticed."
+BUL_proportional_representation_in_the_national_assembly_desc:0 "비례대표제를 도입함으로써 우리는 공정한 선거와 후보와 정당이 적절한 표를 받도록 할 수 있습니다. 불가리아인들의 견해가 눈에 띄지 않게 할 수는 없습니다."
 BUL_support_the_bulgarian_womens_union:0 "불가리아 여성 연합 지원"
-BUL_support_the_bulgarian_womens_union_desc:0 "Julia Malinova, Malinov's wife, is one of the leaders of the Bulgarian Women's Union and a big proponent of empowering women within Bulgaria. Malinov, and the Liberal Party itself, is very much in favour of improving the status of women within the nation. Thus, it is important that we take steps to support the organisation."
+BUL_support_the_bulgarian_womens_union_desc:0 "말리노프의 아내인 줄리아 말리노바는 불가리아 여성 연합의 지도자들 중 한 명이며 불가리아 내에서 여성들에게 힘을 실어주는 큰 지지자입니다. 말리노프, 자유당은 국내 여성의 지위를 향상시키는데 매우 찬성하고 있습니다. 따라서, 우리가 그 조직을 지원하기 위한 조치를 취하는 것이 중요합니다."
 BUL_enact_universal_suffrage:0 "보편적 투표권 제정"
-BUL_enact_universal_suffrage_desc:0 "The disenfranchised within Bulgaria must be given the right to vote. It is wrong of us to champion ourselves a progressive party if we do not grant each and every citizen equal rights. Women, just like men, should be allowed to vote for the party of their choosing and have their views represented."
+BUL_enact_universal_suffrage_desc:0 "불가리아 내에서 선거권을 박탈당한 사람들은 투표권을 가져야 합니다. 우리가 모든 시민들에게 동등한 권리를 주지 않는다면 진보당을 옹호하는 것은 잘못된 것입니다. 남성들과 마찬가지로 여성들은 그들이 선택한 정당에 투표하도록 허용되어야 하고 그들의 의견을 대변해야 합니다."
 BUL_increased_ties_with_russia:0 "러시아와의 유대 관계 강화"
-BUL_increased_ties_with_russia_desc:0 "Malinov and the Liberals are known for their admiration of the Russian Republic, placing trust in them rather than in the Germans. If Bulgaria is to find a nation to protect its sovereignty, especially during these turbulent times, it is clear that Russia is the best nation to forge ties with."
+BUL_increased_ties_with_russia_desc:0 "말리노프와 자유당은 독일보다는 러시아 공화국을 신뢰하는 것으로 알려져 있습니다. 불가리아가 주권을 수호할 국가를 찾고자 한다면, 특히 이렇게 격동의 시기에 러시아가 관계를 맺기 가장 좋은 국가라는 것은 분명합니다."
 BUL_bulgarian_russian_trade_deal:0 "불가리아-러시아 무역 협정"
-BUL_bulgarian_russian_trade_deal_desc:0 "In order to gain access to preferred trade, and possess a trade partner in times of need, it is crucial that we turn to the Russians, our closest allies, and work towards enacting a trade deal with them."
+BUL_bulgarian_russian_trade_deal_desc:0 "선호 무역에 접근하고 어려운 시기에 교역 파트너를 확보하려면, 우리가 러시아와 가장 가까운 동맹국들에게 의지하고 그들과의 무역 협정을 체결하기 위해 노력하는 것이 중요합니다."
 BUL_institute_a_free_trade_policy:0 "자유 무역 정책 연구소"
-BUL_institute_a_free_trade_policy_desc:0 "A free trade policy will allow us to better direct the flow and movement of goods, which will thereby help increase our exports and, in addition, foster economic ties with new nations."
+BUL_institute_a_free_trade_policy_desc:0 "자유 무역 정책은 우리가 상품의 흐름과 움직임을 더 잘 지시할 수 있게 해 줄 것이고, 이것은 우리의 수출을 증가시키는데 도움을 줄 것이며, 게다가 새로운 국가들과 경제 관계를 강화시킬 것입니다."
 BUL_privatisation:0 "민영화"
-BUL_privatisation_desc:0 "By empowering the private sector, we can take the burden of payment off of the government, which will allow for an expanded budget, and increase efficiency within various economic institutions."
+BUL_privatisation_desc:0 "민간부문의 권한을 강화함으로써 우리는 정부로부터 지불의 부담을 덜어낼 수 있고, 이것은 예산 증액을 가능하게 하고, 다양한 경제 기관 내에서 효율성을 높일 수 있습니다."
 BUL_a_stable_and_united_bulgaria:0 "안정적이고 통합된 불가리아"
-BUL_a_stable_and_united_bulgaria_desc:0 "Thankfully, it seems as though most, if not all, of our reforms were met with great success and backing of the Bulgarian people. We can rest easy knowing that we have done our job properly, for the Bulgarian state is stable, its people unified, and, throughout it all, we have managed to preserve liberty and democracy within our great nation. Long live Bulgaria!"
+BUL_a_stable_and_united_bulgaria_desc:0 "고맙게도, 우리 개혁의 대부분은 아니더라도 불가리아인들의 큰 성공과 지지를 받고 있는 것처럼 보입니다. 불가리아는 안정적이고, 국민들은 통합되었으며, 그 모든 것을 통해 우리는 위대한 국가 내에서 자유와 민주주의를 보존할 수 있었기 때문에, 우리는 우리의 일을 적절하게 해왔다는 것을 알고 안심할 수 있습니다. 불가리아 만세!"
 
 BUL_the_absolutists_have_seized_power:0 "절대론자들의 권력을 장악"
 BUL_the_absolutists_have_seized_power_desc:0 "사태가 진정되자 절대론자들은 승리한 당으로 떠오른 뒤 불가리아를 이끌고 있습니다. 강경파 군 장교들로 가득 차 있고 페르디난드의 아들인 보리스가 이끄는 절대론자들은 그들이 속한 곳, 즉 군대와 차르의 손에 권력을 가져오길 원합니다."
