--- a/Kaiserreich Korean Translation/localisation/KR_Bulgaria_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bulgaria_l_english.yml
@@ -744,49 +744,49 @@ BUL_the_end_of_black_monday:0 "검은 월요일의 끝"
 BUL_the_end_of_black_monday_desc:0 "Thankfully, we have finally managed to end the economic plague known as Black Monday and have dug ourselves out of this rut. In addition, however, we have also managed to strengthen our economy, solidify the stability of our currency, and gain the trust of the people by bringing about an economic recovery."
 
 BUL_the_bulgarian_army:0 "불가리아 육군"
-BUL_the_bulgarian_army_desc:0 "Known as the 'Prussia of the Balkans' the Bulgarian Land Forces have been the pride and backbone of the Bulgarian nation. We must ensure that they remain strong and continually bolster them so as to maintain our hegemony in the Balkans."
+BUL_the_bulgarian_army_desc:0 "'발칸의 프로이센' 으로 알려진 불가리아 육군은 불가리아 국가의 자부심과 중추였습니다. 우리는 발칸 반도에서 우리의 패권을 지키기 위해서 그들이 강세를 유지하고 지속적으로 그들을 지지하도록 해야 합니다."
 BUL_maintaining_the_hegemony:0 "헤게모니 유지"
-BUL_maintaining_the_hegemony_desc:0 "We cannot show or even allow our enemies to perceive any sort of weakness. We must assert our power in the Balkans and remind the surrounding nations of the Bulgarian hegemony and the superiority of the Bulgarian Land Forces, lest we lose the territorial gains made following the Weltkrieg."
+BUL_maintaining_the_hegemony_desc:0 "우리는 우리의 적들이 어떤 약점들을 인지하도록 보여주거나 허락할 수 없습니다. 우리는 발칸 반도에서 우리의 권력을 주장하고 주변 국가들에게 불가리아 헤게모니와 불가리아 육군의 우월성을 상기시켜야 합니다."
 BUL_defending_our_land:0 "영토 수호"
-BUL_defending_our_land_desc:0 "It is crucial that we invigorate the soldiers and officers within the armed forces and convince them to defend our rightful lands at all costs. If our enemies gain any sort of advantage over us, it will not matter for the Bulgarian Land Forces will fight on, unending in their battle to save and preserve Bulgaria."
+BUL_defending_our_land_desc:0 "우리는 군인들과 장교들에게 활력을 불어넣고 그들이 어떤 대가를 치르더라도 우리의 정당한 땅을 지키도록 설득하는 것이 중요합니다. 우리의 원수가 우리보다 어떤 종류의 이득이라도 얻는다면, 불가리아 육군이 싸우고, 불가리아를 구제하고 보존하기위한 전투에서 끝나지 않아도 상관없습니다."
 BUL_increase_infantry_equipment_production:0 "보병 장비 생산 증가"
-BUL_increase_infantry_equipment_production_desc:0 "A key component of maintaining the size of the Bulgarian Land Forces is the continual production of equipment. By upping the production of infantry equipment, we can ensure that every soldier will have a firearm."
+BUL_increase_infantry_equipment_production_desc:0 "불가리아 육군의 규모를 유지하는 핵심 요소는 장비의 지속적인 생산입니다. 보병 장비를 생산함으로써 우리는 모든 병사들이 무기를 소지할 수 있도록 보장할 수 있습니다."
 BUL_further_tank_research:0 "추가 전차 연구"
-BUL_further_tank_research_desc:0 "Invented by the British in 1916 during the Weltkrieg, tanks are able to breakthrough enemy lines and possess firepower never before seen. Researching armour will be crucial to the Bulgarian war effort."
+BUL_further_tank_research_desc:0 "1916년 영국군이 발명한 전차는 적진을 돌파할 수 있으며, 지금까지 본 적이 없는 화력을 보유하고 있습니다. 무기에 대한 연구는 불가리아 전쟁 노력에 매우 중요할 것입니다."
 BUL_mountain_infantry:0 "산악병"
-BUL_mountain_infantry_desc:0 "Making an effort to develop and refine our mountain fighting techniques will be crucial to warfare in the Balkans; especially taking into account how mountainous Macedonia and southern Bulgaria are."
+BUL_mountain_infantry_desc:0 "우리의 산악 전투 기술을 개발하고 개선하기 위한 노력을 하는 것은 발칸 반도에서 벌어지는 전쟁에 매우 중요할 것입니다; 특히 마케도니아와 남부 불가리아가 얼마나 산악 지형인지를 고려한다면 말입니다."
 BUL_draw_up_battle_plans:0 "전투 계획 작성"
-BUL_draw_up_battle_plans_desc:0 "In order to maintain a certain readiness, we must draft up contingency plans in the case that our enemies, who have encircled us like vultures they are, decide to go on the offensive."
+BUL_draw_up_battle_plans_desc:0 "일정한 준비 상태를 유지하기 위해서, 우리를 둘러싸고 있는 원수들이 독수리처럼 우리를 공격하기로 결정한 경우의 비상 계획을 작성해야 합니다."
 BUL_advancements_in_artillery:0 "포병의 진보"
-BUL_advancements_in_artillery_desc:0 "Artillery has been a key component of war ever since the Napoleonic Wars and had played a crucial role during the Weltkrieg. Investing in this technology would be extremely helpful as artillery is able to be fired towards distances that infantry cannot reach."
+BUL_advancements_in_artillery_desc:0 "포병대는 나폴레옹 전쟁 이후 전쟁의 핵심 구성 요소였으며 세계대전 기간 동안 중요한 역할을 담당해 왔습니다. 이 기술에 대한 투자는 포병이 보병이 도달할 수없는 거리에서 발사할 수 있으므로 매우 유용할 것입니다."
 BUL_developments_in_motorised_infantry:0 "차량화 보병 개발"
-BUL_developments_in_motorised_infantry_desc:0 "Motorised infantry is crucial in that it provides protection from enemy fire and can help transfer our troops from one place to another at swift speeds."
+BUL_developments_in_motorised_infantry_desc:0 "차량화 보병은 적의 포화를 막아주고 빠른 속도로 우리 군대를 한 곳에서 다른 곳으로 옮기는데 도움을 줄 수 있다는 점에서 중요합니다."
 BUL_investing_in_support_elements:0 "지원 요소에 대한 투자"
-BUL_investing_in_support_elements_desc:0 "Logistics, field hospitals, and engineers are all crucial support elements to any division. If we are to fight smarter, and allow for the preservation of our men and emerge victorious, we must make strides in the field of support equipment."
+BUL_investing_in_support_elements_desc:0 "보급, 야전 병원 및 공병은 모두 중요한 지원 요소입니다. 우리가 더 똑똑하게 싸우고, 우리 사람들의 보존을 허락하며, 승리를 거두려면, 우리는 지원 장비 분야에서 진전을 이루어야 합니다."
 BUL_georgi_rakovski_military_academy:0 "게오르기 라코브스키 군사 학교"
-BUL_georgi_rakovski_military_academy_desc:0 "Based in Sofia, the Georgi Rakovski Military Academy is Bulgaria's oldest military institution of higher education. By pouring funds into the academy, we can ensure the quality of our officers are better than ever."
+BUL_georgi_rakovski_military_academy_desc:0 "소피아에 본부를 둔 게오르기 라코프스키 사관학교는 불가리아에서 가장 오래된 고등 교육 기관입니다. 학교에 자금을 투입함으로써 우리는 장교들의 질이 이전보다 더 좋아지도록 할 수 있습니다."
 BUL_expand_the_reserves:0 "보호 구역 확장"
-BUL_expand_the_reserves_desc:0 "The Bulgarian Land Forces has always been known for its vast reserves of manpower. With the potentially impending tide of Greek, Romanian, Serbian, and Turk soldiers, it is clear that we must expand our manpower reserves so that every able-bodied Bulgarian will be ready to defend his country."
+BUL_expand_the_reserves_desc:0 "불가리아 육군은 언제나 방대한 양의 인력으로 알려져 왔습니다. 그리스, 루마니아, 세르비아, 오스만군의 물결이 임박함에 따라, 모든 신체 건강한 불가리아인들이 그들의 나라를 지킬 준비가 되도록 우리의 인력 비축량을 늘려야 한다는 것은 명백합니다."
 BUL_well_trained_officers:0 "잘 훈련된 장교"
-BUL_well_trained_officers_desc:0 "We cannot allow the quality of our officers to falter or decrease in the slightest. The armed forces are the pride of our nation, and our officers must be of a certain quality if we are to maintain military supremacy in the Balkans."
+BUL_well_trained_officers_desc:0 "우리는 우리 장교들의 질이 조금이라도 흔들리거나 떨어지는 것을 용납할 수 없습니다. 군대는 우리나라의 자랑거리이며, 발칸 반도에서 군사적 우위를 유지하려면 우리의 장교들은 어느 정도 자질이 있어야 합니다."
 BUL_state_armaments_manufacturers:0 "국가 군수 제조업체"
-BUL_state_armaments_manufacturers_desc:0 "Pouring government funds into the subsidisation of key armaments manufacturers, and even going as far as to create state-owned factories, is crucial to the Bulgarian war effort. After all, more factories means greater production of weapons."
+BUL_state_armaments_manufacturers_desc:0 "정부 자금을 주요 무기 제조회사들의 보조금에 쏟아 붓는 것은 불가리아 전쟁 노력에 있어 중요한 역할을 합니다. 결국, 더 많은 공장들은 무기 생산의 증가를 의미합니다."
 BUL_increased_weapons_production_capability:0 "무기 생산 능력 향상"
-BUL_increased_weapons_production_capability_desc:0 "While the production of infantry equipment is crucial, it is also important that we turn our gaze towards focusing on the production of other key weapons. We must ensure that every division recieves the supplies that it deems necessary."
+BUL_increased_weapons_production_capability_desc:0 "보병 장비의 생산도 중요하지만, 다른 주요 무기들의 생산에 초점을 맞추는 것도 중요합니다. 우리는 모든 부서들이 필요하다고 생각되는 보급품을 수령해야 합니다."
 BUL_doctrinal_reevaluation:0 "교리 재평가"
-BUL_doctrinal_reevaluation_desc:0 "The Weltkrieg saw the use and emergence of new doctrines, many of them proving their effectiveness in one way or another. As warfare continues to evolve to this day, it is clear that we must take a good, hard look at the doctrine used by our armed forces and go from there to find the most appropriate doctrine for our troops."
+BUL_doctrinal_reevaluation_desc:0 "세계대전에서 새로운 교리의 사용과 출현을 보았으며, 그 중 많은 교훈이 그 효과를 증명했습니다. 전쟁이 계속 진행됨에 따라 우리 군대가 사용하는 교리를 잘 살펴보고 거기에서 우리 군대에 가장 적합한 교리를 찾기 위해 나아가야 한다는 것은 분명합니다."
 BUL_swift_mobilisation:0 "신속한 동원"
-BUL_swift_mobilisation_desc:0 "We must ensure that every able-bodied Bulgarian has a sense of duty and readiness to defend the motherland at all costs. By implementing mobilisation programmes and drills, we can ensure that our soldiers will be ready at a moments notice to fight against our foes."
+BUL_swift_mobilisation_desc:0 "우리는 모든 신체 건강한 불가리아인들이 어떠한 대가를 치르더라도 조국을 방어할 의무감과 준비성을 갖도록 해야 합니다. 우리는 엄격한 기동 훈련을 실시함으로써 적과 싸울 수 있는 즉각적인 통보를 받을 수 있도록 보장할 수 있습니다."
 BUL_border_fortification:0 "국경 강화"
-BUL_border_fortification_desc:0 "While invigorating our soldiers is certainly helpful, it is also vital that we begin to place fortifications on our borders so as to ensure that key areas will be nigh impossible to take. And even if the enemy does manage to take foritified areas, it will cost them dearly in terms of both equipment and manpower."
+BUL_border_fortification_desc:0 "우리 군인들에게 활력을 주는 것은 분명 도움이 되지만, 핵심 지역을 차지하는 것이 거의 불가능하도록 우리 국경에 요새를 세우는 것도 중요합니다. 그리고 적군이 계속해서 지역을 불법 점령한다고 해도, 장비와 인력 측면에서 비용이 많이 들 것입니다."
 BUL_honouring_our_heroes:0 "영웅을 기리며"
-BUL_honouring_our_heroes_desc:0 "We must remember the sacrifices made by those during the Weltkrieg. Those veterans who had fought, some now crippled–others dead, and brought about the Bulgarian golden age must be properly honoured and mourned. We shall not, must not, forget our soldiers."
+BUL_honouring_our_heroes_desc:0 "우리는 세계대전 동안 그들에 의해 희생된 것을 기억해야 합니다. 싸운 참전 용사들 중 일부는 현재 불구가 되었고 누군가는 사망하였으며, 불가리아 헤게모니를 가져온 군인들을 존경하고 애도해야 합니다. 우리는 우리의 군인들을 잊지 말아야 합니다."
 BUL_rouse_the_masses:0 "미사를 올리다"
-BUL_rouse_the_masses_desc:0 "We must take to rallying the spirit of the Bulgarian people and bringing up their morale so as to incentivise them to fight for the defence and preservation of the Bulgarian state. Long live Bulgaria!"
+BUL_rouse_the_masses_desc:0 "불가리아인의 정신을 진작하고 사기를 북돋아 불가리아를 수호하고 보존하기 위해 투쟁하도록 장려해야 합니다. 불가리아 만세!"
 BUL_reorganisation_of_the_pension_system:0 "연금 제도 개편"
-BUL_reorganisation_of_the_pension_system_desc:0 "As seen with the massive debts incurred following our payment of the veterans' pensions, it is clear that we must reorganise our pension system and work towards better and more efficiently apportioning pensions to our soldiers."
+BUL_reorganisation_of_the_pension_system_desc:0 "퇴역 군인 연금 지급에 따른 막대한 부채에서 알 수 있듯이, 우리는 연금 제도를 개편해야 하며, 병사들에게 더 효율적으로 연금을 배분하기 위해 노력해야 한다는 것은 분명합니다."
 BUL_a_military_with_a_state:0 "국가와 함께하는 군대"
-BUL_a_military_with_a_state_desc:0 "We have done all that we can–improved the quality of our officers, invested in new types of equipment, expanded the manpower reserves, and spent our efforts on military research–in order to ensure that the supremacy of the Bulgarian Land Forces remains everlasting. Long live the military!"
+BUL_a_military_with_a_state_desc:0 "우리는 불가리아 육군의 패권이 영원히 유지되도록 장교의 질을 개선하고, 새로운 장비에 투자하고, 인력 보유를 확대하고, 군사 연구에 노력을 다했습니다. 군대 만세!"
 
 BUL_the_liberals_in_power:0 "자유의 힘"
 BUL_the_liberals_in_power_desc:0 "정치권의 좌파에 의한 지위의 정당으로 널리 간주되고 있는 자유당은 알렉산다르 말리노프와 함께 오랜 기간 동안 당수로 집권해 왔습니다. 현재 자유당이 지지하는 정당은 국회를 통한 국민 대표와 진보적인 개혁의 증가 중 하나입니다."
