--- a/Kaiserreich Korean Translation/localisation/KR_Prewar_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Prewar_l_english.yml
@@ -32,6 +32,8 @@ WK2_minus:0 "Weltkrieg position"
 can_demand_romandy:0 "오트사부아 내의 불안"
 SWI_white:0 "이제 오트사부아를 요구할 수 있습니다."
 loth_armed:0 "로렌에서의 무력 충돌"
+romandydivs_tt:0 "Two volunteer divisions will form in Romandie"
+fravoldivs_tt:0 "Two foreign volunteer divisions will form"
 
 ### Tensions ###
 FRA_damand_romandy_threat:0 "프랑스의 요구"
@@ -44,7 +46,7 @@ FRA_SWI_ignore_ultimatum_AUS:0 "오스트리아의 최후통첩을 무시함"
 SWI_FRA_war:0 "스위스 프랑스 전쟁"
 Romandie_annex:0 "오트사부아 합병"
 IIweltkrieg:0 "2차 세계대전"
-join_eng:0 "Red Menace"
+join_eng:0 "붉은 위협"
 abandon_eng:0 "Retained peace"
 ger_cult_gen:0 "문화 탄압"
 loth_armed_1:0 "Army manoeuvres in Elsass-Lothringen"
