--- a/Kaiserreich Korean Translation/localisation/KR_Qing_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Qing_l_english.yml
@@ -38,7 +38,7 @@ QIE_rocket_effort_desc:0 "Rocket and jet engines allow for unprecedented speeds 
 QIE_NAV_effort:0 "양쯔 항공 계획"
 QIE_NAV_effort_desc:0 "The Navies of The Pacific are strong and mighty, while our fleet expands we must be able to strike from the air. Our scientists have proposed a new range of Bombers designed to scuttle ships named after the sacred River Dolphin that dwells within the great river Yangtzee, they will move and strike swiftly and with purpose."
 
-QIE_naval_effort:0 "제국함대 편성"
+QIE_naval_effort:0 "제국함대 편성" 
 QIE_naval_effort_tt:0 "§Y조선소§를 지을 공간이 부족합니다!"
 QIE_naval_effort_desc:0 "The expansion of our Imperial navy should be a main priority. Assign all available resources to new Dockyards and research into light surface ships."
 QIE_flexible_navy:0 "심해 침투"
@@ -213,10 +213,10 @@ QIE_YUN_WAR_RES:0 "청이 우리의 복종을 원함"
 QIE_YUN_LEAVE:0 "청이 우리를 무시함"
 QIE_ignore:0 "운남이 우리를 무시함"
 GER_NEW_TRE_QIE:0 "신 청-독 조약"
-GER_NO_NEW_TRE_QIE:0 "신 청-독 조약 없음"
+#GER_NO_NEW_TRE_QIE:0 "신 청-독 조약 없음" already defined above as an idea
 GER_TRADE_SANC:0 "독일 경제제재"
 GER_TRADE_ACC:0 "청이 우리의 거래를 수락함"
-QIE_NEW_MARKETS:0 "청이 새로운 시장을 몰색함"
+#QIE_NEW_MARKETS:0 "청이 새로운 시장을 몰색함" already defined above as an idea
 QIE_WANT_LAND:0 "청이 영토 교환을 원함"
 QIE_MON_NEG:0 "협상"
 QIE_MON_NO_NEG:0 "청이 협상하지 않음"
@@ -260,7 +260,7 @@ THEY_JOIN_COA:0 "They joined our Coalition"
 QIE_United:0 "청나라 아래 중국 통합"
 QIE_aircraft_company:0 "새로운 회사"
 military_reformation_inf:0 "보병 개혁"
-military_reformation_inf:0 "기동대 개혁"
+#military_reformation_inf:0 "기동대 개혁" already defined above as an idea
 germany_support:0 "독일의 지원"
 germans_purged:0 "독일인 숙청"
 GER_mil_mis_leave_QING:0 "독일 군사 고문단이 우리를 떠남"
