--- a/Kaiserreich Korean Translation/localisation/KR_Bulgaria_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bulgaria_l_english.yml
@@ -23,7 +23,7 @@ BUL_national_populist_party:0 "즈베다"
 BUL_national_populist_party_long:0 "즈베다"
 
 ### Ideas ###
-BUL_retain_agrarianism_idea:0 "토지 균분론 유지"
+BUL_retain_agrarianism_idea:0 "농민주의 유지"
 BUL_retain_agrarianism_idea_desc:0 "우리는 우리의 뿌리를 기억하며 불가리아가 농촌 국가로 남아있게 하도록 결정했습니다. 이것은 농부들과 불가리아 농민 연합의 회원들을 포함하여 많은 사람들에게 보다 안전하고 올바른 선택으로 보여질 것입니다. 우리는 이제 불가리아의 농작물과 다른 농산물 생산량을 시장에 더 많이 공급하는데 집중할 수 있습니다."
 BUL_ailing_economy_idea:0 "병든 경제"
 BUL_ailing_economy_idea_desc:0 "마닐로프 총리가 독일과의 관계를 단절하기로 한 이후 동시에 우리의 모든 이웃들과의 냉각된 관계로 우리는 우리의 경제가 파산에 이르지 않게하기 위해 우리 스스로와 우리와 거래하고자 하는 거의 얼마 없는 국가들에게 의존하게 될 수 밖에 없었습니다. 게다가, 우리의 위험한 경제적 상태는 가장 모험심 넘치는 투자자조차 쫓아내는 우리의 보호무역 정책에 도움을 받지 못하고 있습니다..."
@@ -701,47 +701,47 @@ bulgariaflavour.16.a:0 "젠장할 자식..."
 
 ### Focuses ###
 BUL_economic_affairs:0 "경제 문제"
-BUL_economic_affairs_desc:0 "The downturn of the German economy, following the plunge of the Berlin Stock Exchange, has affected many nations within Europe. Unfortunately, we have not been able to weather the storm and have been hit just as bad as many other nations. If we are to make a full recovery, we must take steps to strengthen our economy."
+BUL_economic_affairs_desc:0 "베를린 증권 거래소의 붕괴 이후 독일 경제의 침체는 유럽 내 많은 국가들에게 영향을 끼쳤습니다. 불행하게도, 우리는 폭풍우를 견뎌낼 수 없었고 많은 다른나라들처럼 심하게 타격을 받았습니다. 우리가 완전히 회복하려면 경제를 강화하기 위한 조치를 취해야만 합니다."
 BUL_retain_agrarianism:0 "농민주의 유지"
-BUL_retain_agrarianism_desc:0 "Rather than turning Bulgaria into an industrial nation, we must ensure that we remember our roots and retain our agrarian ideals. The people need to be taught better farming techniques, acquire new tools, and acquire more land in order to help kickstart the economy."
+BUL_retain_agrarianism_desc:0 "불가리아를 산업 국가로 만들기 보다는, 우리는 우리의 뿌리를 기억하고 농경지상의 이상을 유지하도록 해야 합니다. 국민들은 경제를 활성화시키기 위해 더 나은 농업 기술을 배우고, 새로운 도구를 얻고, 더 많은 땅을 얻을 필요가 있습니다."
 BUL_increased_wheat_exports:0 "밀 수출 증가"
-BUL_increased_wheat_exports_desc:0 "Wheat, one of Bulgaria's most bountiful and vital crops, is important in these times of crisis. As there is a high demand for it, we must turn our gaze towards increasing our output of wheat so that we may export more and increase our profit."
+BUL_increased_wheat_exports_desc:0 "불가리아의 가장 풍부하고 중요한 농작물 중 하나인 밀은 이 위기의 시기에 중요합니다. 수요가 높기 때문에 우리는 밀의 생산량을 늘리는 쪽으로 방향을 돌려야 합니다."
 BUL_rural_education:0 "시골 교육"
-BUL_rural_education_desc:0 "We must bring education to the peasants within Bulgaria and help teach them new and more efficient farming techniques so as to increase both our agricultural output and help our farmers better compete against machines. That way, we can ensure that nearly every farmer will have a job."
+BUL_rural_education_desc:0 "우리는 불가리아 내의 농민들에게 교육을 가져다 주고 농업 생산량을 늘리며 농부들이 기계와 더 잘 경쟁할 수 있도록 새롭고 더 효율적인 농업 기술을 가르쳐야 합니다. 그렇게 함으로써, 우리는 거의 모든 농부들이 직업을 가질 것이라고 확신할 수 있습니다."
 BUL_redistribute_land_to_the_peasants:0 "농민들에게 땅 재분배"
-BUL_redistribute_land_to_the_peasants_desc:0 "While confiscating land is, by no means, a popular measure, we can make it popular by redistributing the confiscated land to the peasants, who will need the extra land in order to help increase agricultural output and enrich the nation."
+BUL_redistribute_land_to_the_peasants_desc:0 "땅을 몰수하는 것은 결코 인기있는 일이 아니지만, 우리는 농업 생산량을 늘리고 국가의 부를 증진시키기 위해 추가 토지를 필요로 하는 농민들에게 몰수된 토지를 재분배함으로써 그것을 인기있게 만들 수 있습니다."
 BUL_lower_the_tax_burden_on_the_peasantry:0 "소작농세 인하"
-BUL_lower_the_tax_burden_on_the_peasantry_desc:0 "By lowering taxes on the peasantry, we can encourage them to increase their output of agricultural goods, as they will be allowed to keep a greater margin of the profit, while also improving their living standards in general."
+BUL_lower_the_tax_burden_on_the_peasantry_desc:0 "농민에 대한 세금을 낮춤으로써 우리는 농산물의 생산량을 늘리도록 권장할 수 있습니다. 농산물의 생산량을 늘리면 이익의 마진을 크게 높일 수 있고 일반적으로 생활 수준을 향상시킬 수 있습니다."
 BUL_develop_the_countryside:0 "시골 개발"
-BUL_develop_the_countryside_desc:0 "While many of our cities, such as Sofia and Plovdiv, are well developed, the countryside and other rural areas are seldom paid attention to and, thus, ignored. We must begin investment into our rural regions in order to better link our nation."
+BUL_develop_the_countryside_desc:0 "소피아나 플로브디프와 같은 도시들은 잘 발달되어 있는 반면, 지방과 다른 농촌 지역은 거의 관심을 기울이지 않고, 따라서 무시되고 있습니다. 우리는 우리나라를 더 잘 연결시키기 위해 농촌 지역에 투자를 시작해야 합니다."
 BUL_agricultural_subsidisation:0 "농업 보조금"
-BUL_agricultural_subsidisation_desc:0 "In order to truly solidify the profitability of agriculture, we must take steps to fund it and provide farmers with money in order to incentivise them to continually produce more crops."
+BUL_agricultural_subsidisation_desc:0 "농업의 수익성을 진정으로 공고히 하기 위해서, 우리는 농부들이 더 많은 농작물을 계속해서 생산하도록 장려하기 위해서 농업에 자금을 지원하고 보조금을 제공하는 조치를 취해야 합니다."
 BUL_increased_agricultural_output:0 "농업 생산 증가"
-BUL_increased_agricultural_output_desc:0 "We must continually advocate for continued agricultural production and increase our production of crops and find new and more efficient agricultural methods. It is key that we formalise the role of agriculture in the nation so that we may dig ourselves out of the current crisis."
+BUL_increased_agricultural_output_desc:0 "우리는 지속적인 농업 생산을 지지하고 농작물 생산을 증가시켜야 하며 새롭고 더 효율적인 농업 방법을 찾아야 합니다. 우리가 현재의 위기에서 벗어날 수 있도록 농업의 역할을 공식화하는 것이 중요합니다."
 BUL_adopt_industrialisation:0 "산업화 채택"
-BUL_adopt_industrialisation_desc:0 "We must turn towards the industrialisation of Bulgaria during these chaotic times. While agrarianism is indeed a big part of our nation, the times are changing and nations around the world are becoming more reliant on factories rather than farms. While this may displease a large portion of our population, industrialisation is a necessary measure that must be undertaken."
+BUL_adopt_industrialisation_desc:0 "우리는 이 혼란스러운 시기에 불가리아의 산업화를 향해 나아가야 합니다. 농업이 우리나라의 큰 부분인 반면, 시대가 변하고 있고 전세계 국가들이 농장보다는 공장에 더 많이 의존하고 있습니다. 이것이 우리 인구의 많은 부분을 분산시킬 수 있지만, 산업화는 반드시 착수되어야 하는 필수적인 조치입니다."
 BUL_maintain_protectionism:0 "보호주의 유지"
-BUL_maintain_protectionism_desc:0 "It is important that we prioritise the needs of the Bulgarian people rather than allowing for the free flow of goods, which could see the outsourcing of jobs. We must turn our gaze towards Mitteleuropa, the biggest economic bloc in Europe, and enact tariffs against them in order to protect the rights of the Bulgarian worker."
+BUL_maintain_protectionism_desc:0 "일자리를 아웃소싱할 수 있는 상품의 자유로운 흐름을 허용하는 것보다 불가리아 사람들의 요구에 우선 순위를 두는 것이 중요합니다. 불가리아 근로자의 권리를 지키기 위해서는 유럽 최대 경제 블록인 미틀유로파를 바라보고 관세를 부과해야 합니다."
 BUL_university_of_sofia:0 "소피아 대학교"
-BUL_university_of_sofia_desc:0 "Founded on the 1st of October, 1888, the University of Sofia is Bulgaria's oldest higher education institution. By pouring government funds into the development and expansion of the services offered by the university, we can allow for the education of our citizenry."
+BUL_university_of_sofia_desc:0 "1888년 10월 1일에 설립된 소피아 대학은 불가리아에서 가장 오래된 고등 교육 기관입니다. 정부 자금을 대학에서 제공하는 서비스의 개발과 확장에 투입함으로써, 우리는 시민 교육을 허용할 수 있습니다."
 BUL_urban_development:0 "도시 개발"
-BUL_urban_development_desc:0 "While Bulgaria's urban areas are, by far, the most developed areas of the nation, it is also clear to many that the amount of development in those areas lags behind that of our European counterparts. We must invest more in our urban areas so as to spur resettlement there, thereby allowing for the creation of new jobs."
-BUL_darzhavna_aeroplanna_rabotilnitsa:0 "국가 항공기 작업장"
-BUL_darzhavna_aeroplanna_rabotilnitsa_desc:0 "It would be in our best interest to work with Darzhavna Aeroplanna Rabotilnitsa, a well-known aircraft manufacturer located in Bozhurishte, so as to help better connect our country by air and spur further economic activity in the area."
+BUL_urban_development_desc:0 "불가리아의 도심 지역은 훨씬 발전된 지역이기는 하지만, 유럽 지역의 발전량보다 뒤처져 있습니다. 우리는 재정착을 촉진하여 새로운 일자리를 창출할 수 있도록 도시 지역에 더 많이 투자해야 합니다."
+BUL_darzhavna_aeroplanna_rabotilnitsa:0 "다즈하브나 에어로플레나 라보틸니차"
+BUL_darzhavna_aeroplanna_rabotilnitsa_desc:0 "보즈리슈테에 위치한 잘 알려진 항공기 제조업체인 다즈하브나 에어로플레나 라보틸니차와의 협력을 통해 우리나라의 경제 활동을 더욱 활발하게 하는 것이 우리의 최대 관심사가 될 것입니다."
 BUL_economic_growth_in_city_centres:0 "도시 중심부 경제 성장"
-BUL_economic_growth_in_city_centres_desc:0 "In order to further stimulate economic activity and ensure further development in urban areas, we must begin the massive undertaking of public works projects and infrastructural development programmes."
+BUL_economic_growth_in_city_centres_desc:0 "도시 지역의 경제 활동을 더욱 활성화하고 더 많은 발전을 보장하기 위해서, 우리는 공공 사업 프로젝트와 기반 시설 개발 프로그램의 대규모 사업을 시작해야 합니다."
 BUL_work_with_arsenal_ad:0 "아스날 AD와의 협력"
-BUL_work_with_arsenal_ad_desc:0 "Bulgaria's oldest arms supplier, Arsenal AD, which is headquartered in Kazanlak, specialises primarily in the creation of military equipment and affiliated firearms. By working together with them, and providing government subsidies, we can boost our domestic arms industry and better supply our military."
+BUL_work_with_arsenal_ad_desc:0 "불가리아에서 가장 오래된 무기 공급자인 아스날 AD 는 주로 군사 장비와 관련 무기 제조를 전문으로 하고 있습니다. 그들과 함께 일하고 정부 보조금을 제공함으로써, 우리는 국내 무기 산업을 강화하고 군에 더 나은 공급을 할 수 있습니다."
 BUL_empower_the_bulgarian_national_bank:0 "불가리아 국립 은행 역량 강화"
-BUL_empower_the_bulgarian_national_bank_desc:0 "It is of the utmost importance that we work on revaluing our currency, the Bulgarian lev, by working in lockstep with the Bulgarian National Bank. Through promoting the stability of our currency and imposing proper regulations on the bank, we can better control the resilience of the lev."
+BUL_empower_the_bulgarian_national_bank_desc:0 "불가리아 국립 은행과 보조를 맞추면서 우리의 통화인 불가리아 레프를 재평가하는 것이 가장 중요합니다. 우리 통화의 안정성을 촉진하고 은행에 적절한 규정을 부과함으로써 우리는 금융 시장의 탄력성을 보다 잘 통제할 수 있습니다."
 BUL_examining_the_budget:0 "예산 검토"
-BUL_examining_the_budget_desc:0 "The collapse of the Berlin Stock Exchange has brought about a period of economic uncertainty within Bulgaria. This, of course, has negatively impacted the budget and, by extension, government spending. If we are to pull ourselves out of this financial rut, we must take a close look at the status of the budget and rebalancing it."
+BUL_examining_the_budget_desc:0 "베를린 증권 거래소의 붕괴는 불가리아 내에 경제적 불확실성의 시기를 가져왔습니다. 이는 물론 예산과 정부 지출에 부정적인 영향을 미쳤습니다. 만약 우리가 이 재정난에서 벗어나려면, 우리는 예산의 상태를 면밀히 관찰하고 재조정해야 합니다."
 BUL_slash_military_pensions:0 "군인 연금 삭감"
-BUL_slash_military_pensions_desc:0 "It is clear that we can no longer hope the maintain the extensive military pensions, which had already strained our finances prior to Black Monday, granted to veterans following the end of the Weltkrieg. While it will be an extremely unpopular and controversial decision, we must cut spending on pensions."
+BUL_slash_military_pensions_desc:0 "세계대전이 끝난 후 참전 용사들에게 부여된, 검은 월요일 이전에 우리 재정을 이미 압박했던 광범위한 군사 연금을 유지하기를 더 이상 희망할 수 없다는 것이 분명합니다. 극도로 인기가 없고 논쟁의 여지가있는 결정이지만, 우리는 연금에 대한 지출을 줄여야 합니다."
 BUL_maintain_military_pensions:0 "군인 연금 유지"
-BUL_maintain_military_pensions_desc:0 "While it is true that the maintenance of military pensions has been straining our already stretched finances, we cannot simply slash pensions and leave our heroes to suffer. No, we must bear this burden for it is our obligation to the veterans, who had helped to bring about the golden age, to do so."
+BUL_maintain_military_pensions_desc:0 "군인 연금의 유지가 재정을 압박하고 있는 것이 사실이지만, 우리는 단순히 연금을 줄여서 영웅들을 고통받게 할 수는 없습니다. 아니, 우리는 이런 짐을 져야 합니다. 그것은 황금기를 가져오는데 도움을 준 참전 용사들에 대한 우리의 의무이기 때문입니다."
 BUL_the_end_of_black_monday:0 "검은 월요일의 끝"
-BUL_the_end_of_black_monday_desc:0 "Thankfully, we have finally managed to end the economic plague known as Black Monday and have dug ourselves out of this rut. In addition, however, we have also managed to strengthen our economy, solidify the stability of our currency, and gain the trust of the people by bringing about an economic recovery."
+BUL_the_end_of_black_monday_desc:0 "고맙게도, 검은 월요일이라고 알려진 경제 전염병을 끝내는데 성공했고, 우리 스스로를 이 곤경에서 벗어나게 했습니다. 게다가, 우리는 또한 경제를 강화하고, 통화의 안정성을 공고히 하며, 경제 회복을 이끌어냄으로써 국민들의 신뢰를 얻는데 성공했습니다."
 
 BUL_the_bulgarian_army:0 "불가리아 육군"
 BUL_the_bulgarian_army_desc:0 "'발칸의 프로이센' 으로 알려진 불가리아 육군은 불가리아 국가의 자부심과 중추였습니다. 우리는 발칸 반도에서 우리의 패권을 지키기 위해서 그들이 강세를 유지하고 지속적으로 그들을 지지하도록 해야 합니다."
