--- a/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
@@ -1209,36 +1209,36 @@ CEA_national_populist:0 "우방기-샤리"
 CEA_national_populist_ADJ:0 "우방기"
 CEA_national_populist_DEF:0 "우방기-샤리"
 
-CEN_totalist:0 "Centroamérica"
-CEN_totalist_ADJ:0 "Centroamérican"
-CEN_totalist_DEF:0 "Centroamérica"
-CEN_syndicalist:0 "Centroamérica"
-CEN_syndicalist_ADJ:0 "Centroamérican"
-CEN_syndicalist_DEF:0 "Centroamérica"
-CEN_radical_socialist:0 "Centroamérica"
-CEN_radical_socialist_ADJ:0 "Centroamérican"
-CEN_radical_socialist_DEF:0 "Centroamérica"
-CEN_social_democrat:0 "Centroamérica"
-CEN_social_democrat_ADJ:0 "Centroamérican"
-CEN_social_democrat_DEF:0 "Centroamérica"
-CEN_social_liberal:0 "Central American Confederation"
-CEN_social_liberal_ADJ:0 "Central American"
-CEN_social_liberal_DEF:0 "the Central American Confederation"
-CEN_market_liberal:0 "Central American Confederation"
-CEN_market_liberal_ADJ:0 "Central American"
-CEN_market_liberal_DEF:0 "the Central American Confederation"
-CEN_social_conservative:0 "Central American Confederation"
-CEN_social_conservative_ADJ:0 "Central American"
-CEN_social_conservative_DEF:0 "the Central American Confederation"
-CEN_authoritarian_democrat:0 "Central American Republic"
-CEN_authoritarian_democrat_ADJ:0 "Central American"
-CEN_authoritarian_democrat_DEF:0 "the Central American Republic"
-CEN_paternal_autocrat:0 "Central American Republic"
-CEN_paternal_autocrat_ADJ:0 "Central American"
-CEN_paternal_autocrat_DEF:0 "the Central American Republic"
-CEN_national_populist:0 "Central American Republic"
-CEN_national_populist_ADJ:0 "Central American"
-CEN_national_populist_DEF:0 "the Central American Republic"
+CEN_totalist:0 "센트로아메리카"
+CEN_totalist_ADJ:0 "센트로아메리카n"
+CEN_totalist_DEF:0 "센트로아메리카"
+CEN_syndicalist:0 "센트로아메리카"
+CEN_syndicalist_ADJ:0 "센트로아메리카n"
+CEN_syndicalist_DEF:0 "센트로아메리카"
+CEN_radical_socialist:0 "센트로아메리카"
+CEN_radical_socialist_ADJ:0 "센트로아메리카n"
+CEN_radical_socialist_DEF:0 "센트로아메리카"
+CEN_social_democrat:0 "센트로아메리카"
+CEN_social_democrat_ADJ:0 "센트로아메리카n"
+CEN_social_democrat_DEF:0 "센트로아메리카"
+CEN_social_liberal:0 "센트로아메리카 연합국"
+CEN_social_liberal_ADJ:0 "중앙아메리카"
+CEN_social_liberal_DEF:0 "센트로아메리카 연합국"
+CEN_market_liberal:0 "센트로아메리카 연합국"
+CEN_market_liberal_ADJ:0 "중앙아메리카"
+CEN_market_liberal_DEF:0 "센트로아메리카 연합국"
+CEN_social_conservative:0 "센트로아메리카 연합국"
+CEN_social_conservative_ADJ:0 "중앙아메리카"
+CEN_social_conservative_DEF:0 "센트로아메리카 연합국"
+CEN_authoritarian_democrat:0 "중앙 아메리카 공화국"
+CEN_authoritarian_democrat_ADJ:0 "중앙아메리카"
+CEN_authoritarian_democrat_DEF:0 "중앙 아메리카 공화국"
+CEN_paternal_autocrat:0 "중앙 아메리카 공화국"
+CEN_paternal_autocrat_ADJ:0 "중앙아메리카"
+CEN_paternal_autocrat_DEF:0 "중앙 아메리카 공화국"
+CEN_national_populist:0 "중앙 아메리카 공화국"
+CEN_national_populist_ADJ:0 "중앙아메리카"
+CEN_national_populist_DEF:0 "중앙 아메리카 공화국"
 
 CEY_totalist:0 "실론"
 CEY_totalist_ADJ:0 "실론"
@@ -2852,33 +2852,33 @@ GRU_national_populist:0 "독일 연방국"
 GRU_national_populist_ADJ:0 "독일"
 GRU_national_populist_DEF:0 "독일 연방국"
 
-GUA_market_liberal:0 "Guatemala"
-GUA_market_liberal_ADJ:0 "Guatemalan"
-GUA_market_liberal_DEF:0 "Guatemala"
-GUA_national_populist:0 "Guatemala"
-GUA_national_populist_ADJ:0 "Guatemalan"
-GUA_national_populist_DEF:0 "Guatemala"
-GUA_paternal_autocrat:0 "Guatemala"
-GUA_paternal_autocrat_ADJ:0 "Guatemalan"
-GUA_paternal_autocrat_DEF:0 "Guatemala"
-GUA_radical_socialist:0 "Guatemala"
-GUA_radical_socialist_ADJ:0 "Guatemalan"
-GUA_radical_socialist_DEF:0 "Guatemala"
-GUA_social_conservative:0 "Guatemala"
-GUA_social_conservative_ADJ:0 "Guatemalan"
-GUA_social_conservative_DEF:0 "Guatemala"
-GUA_social_democrat:0 "Guatemala"
-GUA_social_democrat_ADJ:0 "Guatemalan"
-GUA_social_democrat_DEF:0 "Guatemala"
-GUA_social_liberal:0 "Guatemala"
-GUA_social_liberal_ADJ:0 "Guatemalan"
-GUA_social_liberal_DEF:0 "Guatemala"
-GUA_authoritarian_democrat:0 "Guatemala"
-GUA_authoritarian_democrat_ADJ:0 "Guatemalan"
-GUA_authoritarian_democrat_DEF:0 "Guatemala"
-GUA_totalist:0 "Guatemala"
-GUA_totalist_ADJ:0 "Guatemalan"
-GUA_totalist_DEF:0 "Guatemala"
+GUA_market_liberal:0 "과테말라"
+GUA_market_liberal_ADJ:0 "과테말라"
+GUA_market_liberal_DEF:0 "과테말라"
+GUA_national_populist:0 "과테말라"
+GUA_national_populist_ADJ:0 "과테말라"
+GUA_national_populist_DEF:0 "과테말라"
+GUA_paternal_autocrat:0 "과테말라"
+GUA_paternal_autocrat_ADJ:0 "과테말라"
+GUA_paternal_autocrat_DEF:0 "과테말라"
+GUA_radical_socialist:0 "과테말라"
+GUA_radical_socialist_ADJ:0 "과테말라"
+GUA_radical_socialist_DEF:0 "과테말라"
+GUA_social_conservative:0 "과테말라"
+GUA_social_conservative_ADJ:0 "과테말라"
+GUA_social_conservative_DEF:0 "과테말라"
+GUA_social_democrat:0 "과테말라"
+GUA_social_democrat_ADJ:0 "과테말라"
+GUA_social_democrat_DEF:0 "과테말라"
+GUA_social_liberal:0 "과테말라"
+GUA_social_liberal_ADJ:0 "과테말라"
+GUA_social_liberal_DEF:0 "과테말라"
+GUA_authoritarian_democrat:0 "과테말라"
+GUA_authoritarian_democrat_ADJ:0 "과테말라"
+GUA_authoritarian_democrat_DEF:0 "과테말라"
+GUA_totalist:0 "과테말라"
+GUA_totalist_ADJ:0 "과테말라"
+GUA_totalist_DEF:0 "과테말라"
 
 GXC_totalist:0 "광서 코뮌"
 GXC_totalist_ADJ:0 "광서"
@@ -4138,18 +4138,18 @@ MAN_social_liberal_DEF:0 "만주"
 MAN_market_liberal:0 "만주"
 MAN_market_liberal_ADJ:0 "만주"
 MAN_market_liberal_DEF:0 "만주"
-MAN_social_conservative:0 "대 만주 제국"
+MAN_social_conservative:0 "대만주제국"
 MAN_social_conservative_ADJ:0 "만주"
-MAN_social_conservative_DEF:0 "대 만주 제국"
-MAN_authoritarian_democrat:0 "대 만주 제국"
+MAN_social_conservative_DEF:0 "대만주제국"
+MAN_authoritarian_democrat:0 "대만주제국"
 MAN_authoritarian_democrat_ADJ:0 "만주"
-MAN_authoritarian_democrat_DEF:0 "대 만주 제국"
-MAN_paternal_autocrat:0 "대 만주 제국"
+MAN_authoritarian_democrat_DEF:0 "대만주제국"
+MAN_paternal_autocrat:0 "대만주제국"
 MAN_paternal_autocrat_ADJ:0 "만주"
-MAN_paternal_autocrat_DEF:0 "대 만주 제국"
-MAN_national_populist:0 "대 만주 제국"
+MAN_paternal_autocrat_DEF:0 "대만주제국"
+MAN_national_populist:0 "대만주제국"
 MAN_national_populist_ADJ:0 "만주"
-MAN_national_populist_DEF:0 "대 만주 제국"
+MAN_national_populist_DEF:0 "대만주제국"
 
 MEE_totalist:0 "멕시코 제국"
 MEE_totalist_ADJ:0 "멕시코"
