--- a/Kaiserreich Korean Translation/localisation/KR_Malaya_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Malaya_l_english.yml
@@ -1,23 +1,23 @@
 ﻿l_english:
 
 ### Parties ###
-MLY_totalist_party:0 "Parti Nasionalis Sosial Malaya"
-MLY_totalist_party_long:0 "Parti Nasionalis Sosial Malaya(Malayan Social-Nationalist Party)"
-MLY_radical_socialist_party:0 "Parti Sindikalis Malaya"
-MLY_radical_socialist_party_long:0 "Parti Sindikalis Malaya(Malayan Syndicalist Party)"
-MLY_syndicalist_party:0 "Parti Konvensyen Pertanian"
-MLY_syndicalist_party_long:0 "Parti Konvensyen Pertanian(Agrarian Convention Party)"
-MLY_social_democrat_party:0 "Barisan Sosialis Rakyat Malaya"
-MLY_social_democrat_party_long:0 "Barisan Sosialis Rakyat Malaya(Malayan People's Socialist Front)"
-MLY_social_liberal_party:0 "Parti Gerakan Rakyat Malaysia"
-MLY_social_liberal_party_long:0 "Parti Gerakan Rakyat Malaysia(Malaysian People's Movement Party)"
-MLY_market_liberal_party:0 "Parti Kemakmuran Negara"
-MLY_market_liberal_party_long:0 "Parti Kemakmuran Negara(National Prosperity Party)"
-MLY_social_conservative_party:0 "Parti Tindakan Rakyat"
-MLY_social_conservative_party_long:0 "Parti Tindakan Rakyat(People's Action Party)"
-MLY_authoritarian_democrat_party:0 "Perikatan"
-MLY_authoritarian_democrat_party_long:0 "Perikatan(Alliance Party)"
-MLY_paternal_autocrat_party:0 "Majlis Sultan"
-MLY_paternal_autocrat_party_long:0 "Majlis Sultan(Council of Sultans)"
-MLY_national_populist_party:0 "Hizbul Muslimin"
-MLY_national_populist_party_long:0 "Hizbul Muslimin(Malay Muslim People's Party)"
+MLY_totalist_party:0 "말레이 사회국가주의당"
+MLY_totalist_party_long:0 "말레이 사회국가주의당"
+MLY_radical_socialist_party:0 "말레이 생디칼리스트당"
+MLY_radical_socialist_party_long:0 "말레이 생디칼리스트당"
+MLY_syndicalist_party:0 "농민단체당"
+MLY_syndicalist_party_long:0 "농민단체당"
+MLY_social_democrat_party:0 "말레이 인민사회주의 전선"
+MLY_social_democrat_party_long:0 "말레이 인민사회주의 전선"
+MLY_social_liberal_party:0 "말레이 인민운동당"
+MLY_social_liberal_party_long:0 "말레이 인민운동당"
+MLY_market_liberal_party:0 "국가번영당"
+MLY_market_liberal_party_long:0 "국가번영당"
+MLY_social_conservative_party:0 "인민행동당"
+MLY_social_conservative_party_long:0 "인민행동당"
+MLY_authoritarian_democrat_party:0 "동맹당"
+MLY_authoritarian_democrat_party_long:0 "동맹당"
+MLY_paternal_autocrat_party:0 "술탄 회의"
+MLY_paternal_autocrat_party_long:0 "술탄 회의"
+MLY_national_populist_party:0 "말레이 무슬림 인민당"
+MLY_national_populist_party_long:0 "말레이 무슬림 인민당"
